--- a/index.html
+++ b/index.html
@@ -23,132 +23,143 @@
     <!-- Our web map will get placed into this div element -->
 
     <div id="controls" style="margin: 15px;">
-      <button id="showAllTreesButton">Show All Trees</button>
+      <button id="showAllTreesButton">Show All Address</button>
 
       <span style="display:inline-block; width: 30px"></span>
-      <input type="text" id="highlightTreesTextEntry" placeholder="tree taxa">
+      <input type="text" id="highlightTreesTextEntry" placeholder="Address Name">
       <button id="highlightTreesButton">Highlight</button>
     </div>
 
     <script>
-      // Make a Leaflet map with L.map().
-      // Store the map in the variable 'map'.
-      // "mapid" is the 'id' of the DOM element to contain the map.
-      var map = L.map('mapid', {
-          center: [49.265637, -123.256113],
-          zoom: 15
-        } // this object holds map options
-      );
+          // Make a Leaflet map with L.map().
+          // Store the map in the variable 'map'.
+          // "mapid" is the 'id' of the DOM element to contain the map.
+          var map = L.map('mapid', {
+              center: [49.265637, -123.256113],
+              zoom: 15
+            } // this object holds map options
+          );
 
-      var topoTiles = L.tileLayer(
-        'https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
-          maxZoom: 17,
-          attribution: 'Basemap data: &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, <a href="http://viewfinderpanoramas.org">SRTM</a> | Basemap style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'
-        }
-      ).addTo(map);
+          var topoTiles = L.tileLayer(
+            'https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+              maxZoom: 17,
+              attribution: 'Basemap data: &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, <a href="http://viewfinderpanoramas.org">SRTM</a> | Basemap style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'
+            }
+          ).addTo(map);
 
-      //var myPoint = L.marker(
-      //                 [49.265637, -123.256113]
-      //              ).addTo(map);
+          //var myPoint = L.marker(
+          //                 [49.265637, -123.256113]
+          //              ).addTo(map);
 
-      //var myPoly = L.polygon(
-      //        			[
-      //        				[49.2797,-123.2678],
-      //                [49.2770,-123.2690],
-      //            		[49.2791,-123.2723],
-      //                [49.2797,-123.2678],
-      //              ],
-      //  						{color: 'red', weight: 6}
-      //						 ).addTo(map);
+          //var myPoly = L.polygon(
+          //        			[
+          //        				[49.2797,-123.2678],
+          //                [49.2770,-123.2690],
+          //            		[49.2791,-123.2723],
+          //                [49.2797,-123.2678],
+          //              ],
+          //  						{color: 'red', weight: 6}
+          //						 ).addTo(map);
 
-      // load GeoJSON from a file on the web
-      // $ is jQuery.
+          // load GeoJSON from a file on the web
+          // $ is jQuery.
+      ;
+          var treeMarkerOptions = {
+            radius: 8,
+            fillColor: "#ffa500",
+            color: "#001",
+            weight: 1,
+            opacity: 0.2,
+            fillOpacity: 0.5
+          };
+      var treeMarkerHighlightedOptions = {
+             radius: 10,
+            fillColor: "#ff0000",
+            color: "#000",
+            weight: 1,
+            opacity: 0.5,
+            fillOpacity: 0.5
+          };
+          function onEachTree(feature, layer) {
+            // does this tree even have a property named TAXA?
+            if (feature.properties && feature.properties.SITE_NAME) {
+              layer.bindTooltip(feature.properties.SITE_NAME);
+            }
+          }
 
-      var treeMarkerOptions = {
-        radius: 4,
-        fillColor: "#007800",
-        color: "#000",
-        weight: 1,
-        opacity: 0.2,
-        fillOpacity: 0.2
-      };
+          function treePointToLayer(feature, latlng) {
+             if (taxaToHighlight === ""){
+               treeMarkerOptionsToUse = treeMarkerOptions;
+             } else {treeMarkerOptionsToUse = treeMarkerHighlightedOptions;}
 
-      function onEachTree(feature, layer) {
-        // does this tree even have a property named TAXA?
-        if (feature.properties && feature.properties.TAXA) {
-          layer.bindTooltip(feature.properties.TAXA);
-        }
-      }
+            return L.circleMarker(
+              latlng,
+              treeMarkerOptionsToUse
+            )
+          }
 
-      function treePointToLayer(feature, latlng) {
-        return L.circleMarker(
-          latlng,
-          treeMarkerOptions
-        );
-      }
+          function treesToFilter(feature, layer) {
+            if (taxaToHighlight === "") {
+              return true;
+              // In this case, we're not highlighting anything, so draw everything.
+            } else if (feature.properties && feature.properties.SITE_NAME) {
+              // We just checked to make sure there are properties to avoid an error
+              //   by asking for the .TAXA when there are no properties.
+              // Now, we need to check to see if the .TAXA *includes* the search string we're
+              //   trying to highlight.
+              return feature.properties.SITE_NAME.toLowerCase().includes(taxaToHighlight.toLowerCase());
+              // We ignore uppercase/lowercase differences.
+            } else {
+              return false;
+              // This is for features that lack properties.
+              // Don't display them.
+            }
+          }
 
-      function treesToFilter(feature, layer) {
-        if (taxaToHighlight === "") {
-          return true;
-          // In this case, we're not highlighting anything, so draw everything.
-        } else if (feature.properties && feature.properties.TAXA) {
-          // We just checked to make sure there are properties to avoid an error
-          //   by asking for the .TAXA when there are no properties.
-          // Now, we need to check to see if the .TAXA *includes* the search string we're
-          //   trying to highlight.
-          return feature.properties.TAXA.toLowerCase().includes(taxaToHighlight.toLowerCase());
-          // We ignore uppercase/lowercase differences.
-        } else {
-          return false;
-          // This is for features that lack properties.
-          // Don't display them.
-        }
-      }
+          var lastLayerAdded = {};
 
-      var lastLayerAdded = {};
+          function addTrees() {
+            if (map.hasLayer(lastLayerAdded)) {
+              map.removeLayer(lastLayerAdded);
+            }
+            lastLayerAdded = L.geoJSON(treeGeoJSONdata, {
+              pointToLayer: treePointToLayer,
+              onEachFeature: onEachTree,
+              filter: treesToFilter
+            });
+            lastLayerAdded.addTo(map);
+          };
 
-      function addTrees() {
-        if (map.hasLayer(lastLayerAdded)) {
-          map.removeLayer(lastLayerAdded);
-        }
-        lastLayerAdded = L.geoJSON(treeGeoJSONdata, {
-          pointToLayer: treePointToLayer,
-          onEachFeature: onEachTree,
-          filter: treesToFilter
-        });
-        lastLayerAdded.addTo(map);
-      };
+          var taxaToHighlight = "";
+          // This is set by someone pressing the highlight button.
+          // If it's an empty string, then just draw everything.
 
-      var taxaToHighlight = "";
-      // This is set by someone pressing the highlight button.
-      // If it's an empty string, then just draw everything.
+          function highlightTrees() {
+            taxaToHighlight = document
+              .getElementById("highlightTreesTextEntry")
+              .value;
+            addTrees();
+            taxaToHighlight = ""; // reset so that "Show All Trees" works.
+          }
 
-      function highlightTrees() {
-        taxaToHighlight = document
-          .getElementById("highlightTreesTextEntry")
-          .value;
-        addTrees();
-        taxaToHighlight = ""; // reset so that "Show All Trees" works.
-      }
-
-      var treeGeoJSONdata;
+          var treeGeoJSONdata;
 
 
-      $.getJSON("https://raw.githubusercontent.com/UBCGeodata/ubc-geospatial-opendata/master/ubcv/landscape/geojson/ubcv_campus_trees.geojson",
-        function(data) {
-          // Store data for later:
-          treeGeoJSONdata = data;
-          // Create event listener for ShowAllTrees Button:
-          document
-            .getElementById("showAllTreesButton")
-            .addEventListener("click", addTrees);
+          $.getJSON("https://raw.githubusercontent.com/UBCGeodata/ubc-geospatial-opendata/master/ubcv/locations/geojson/ubcv_address.geojson",
+            function(data) {
+              // Store data for later:
+              treeGeoJSONdata = data;
+              // Create event listener for ShowAllTrees Button:
+              document
+                .getElementById("showAllTreesButton")
+                .addEventListener("click", addTrees);
 
-          document
-            .getElementById("highlightTreesButton")
-            .addEventListener("click", highlightTrees);
+              document
+                .getElementById("highlightTreesButton")
+                .addEventListener("click", highlightTrees);
 
-        }
-      );
+            }
+          );
     </script>
   
 
